--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "type": "commonjs",
   "dependencies": {
+    "chalk": "^4.1.2",
     "commander": "^11.1.0",
     "express": "^4.18.2",
     "open": "^10.0.3",
