feat: cli & loader fix

--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "commander": "^11.1.0",
     "express": "^4.18.2",
     "open": "^10.0.3",
-    "simple-git": "^3.22.0"
+    "simple-git": "^3.22.0",
+    "ora": "^7.0.1",
+    "figlet": "^1.6.0"
   }
 }
