--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "chalk": "^4.1.2",
     "commander": "^11.1.0",
     "express": "^4.18.2",
+    "figlet": "^1.6.0",
+    "gradient-string": "^3.0.0",
     "open": "^10.0.3",
-    "simple-git": "^3.22.0",
     "ora": "^7.0.1",
-    "figlet": "^1.6.0"
+    "simple-git": "^3.22.0"
   }
 }
