--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "git-time-machine",
+  "name": "git-tm",
   "version": "0.1.0",
   "description": "An elegant visual Git history explorer with real-time commit comparison capabilities",
   "main": "src/cli.js",
